force-app/main/default/objects/Payment__c/fields/Payment_Utilized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Utilized_Amount__c</fullName>
    <label>Payment Utilized Amount</label>
    <summarizedField>Invoice_Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Payment__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>