force-app/main/default/objects/Payment__c/recordTypes/Payable.recordType-meta.xml
<RecordType>
    <fullName>Payable</fullName>
    <active>true</active>
    <label>Payable</label>
</RecordType>