force-app/main/default/objects/Payment__c/recordTypes/Receivable.recordType-meta.xml
<RecordType>
    <fullName>Receivable</fullName>
    <active>true</active>
    <label>Receivable</label>
</RecordType>