force-app/main/default/objects/Payment__c/validationRules/Payment_Amount_cannot_be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_cannot_be_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c = 0</errorConditionFormula>
    <errorMessage>Payment Amount cannot be Zero</errorMessage>
</ValidationRule>