force-app/main/default/objects/Payment__c/validationRules/Payment_Amount_should_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_should_be_greater_than_0</fullName>
    <active>true</active>
    <description>Amount should be greater than zero</description>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount should be greater than zero</errorMessage>
</ValidationRule>