force-app/main/default/objects/Payment__c/validationRules/Payment_Utilized_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Utilized_Amount</fullName>
    <active>true</active>
    <description>will check Payment Utilized amount with Payment amount , if Utilized amount exceeded, will throw an error while creating Invoice Payment</description>
    <errorConditionFormula>Payment_Utilized_Amount__c &gt; Amount__c</errorConditionFormula>
    <errorMessage>Payment utilized amount is being exceeded, please enter lesser amount</errorMessage>
</ValidationRule>